--- a/desktopinfo.ini
+++ b/desktopinfo.ini
@@ -5,12 +5,14 @@ right=32
 width=460
 column1width=125
 
-formcolor=#000000     ; charcoal card
-transparency=50        ; 50 % = dark glass, raise to 60‑70 if still too strong
+formcolor=#000000     ; charcoal card (This dark background is good for white text)
+transparency=25        ; SIGNIFICANTLY REDUCED: Was 50. This makes the panel 75% opaque.
+                       ; Lower this further (e.g., 15) if still not clear enough.
+                       ; Higher (e.g., 35) if you want more transparency but still good readability.
 
 font-face=Segoe UI
 font-size=13
-font-weight=bold       ; Added to make default font bold
+font-weight=bold       ; Attempt to make default font bold.
 font-quality=5
 line-spacing=2
 contextmenu=0
@@ -20,37 +22,35 @@ allowdrag=0
 menu-quit=Exit
 
 [items]
-TEXT-COLOR=#000000     ; labels - Changed to Black
-COLOR=#000000          ; values - Changed to Black
-set accent=#000000     ; cyan headings / hyperlink - Changed to Black for uniformity, though hyperlinks might have their own color rules.
+TEXT-COLOR=#FFFFFF     ; labels - White for high contrast on dark panel
+COLOR=#FFFFFF          ; values - White for high contrast
+set accent=#FFFFFF     ; headings / hyperlink - Changed to White for uniformity and clarity
 
-; Apply bold style where possible, and ensure black color
-HOST=text:PC Name:,display:%1,style:b,color:#000000
+; Apply bold style where possible, and ensure white color
+HOST=text:PC Name:,display:%1,style:b,color:#FFFFFF
 
 ; IPv4 address – first active NIC with a gateway
 NETWORKINTERFACES=interval:60,maxrows:1,operstatus:1,iftype:6 71,\
- text:IP Address:,hide-no-result:1,display:%8,style:b,color:#000000
+ text:IP Address:,hide-no-result:1,display:%8,style:b,color:#FFFFFF
 
 ; Windows version / build
-WMI=text:OS Version:,namespace:root\cimv2,query:Win32_OperatingSystem,display:%Caption%,style:b,color:#000000
-REG=text:OS Build:,value:HKLM\SOFTWARE\Microsoft\Windows NT\CurrentVersion\DisplayVersion,display:%1,style:b,color:#000000
+WMI=text:OS Version:,namespace:root\cimv2,query:Win32_OperatingSystem,display:%Caption%,style:b,color:#FFFFFF
+REG=text:OS Build:,value:HKLM\SOFTWARE\Microsoft\Windows NT\CurrentVersion\DisplayVersion,display:%1,style:b,color:#FFFFFF
 
 ; Logical drives – GB free + %
 LOGICALDRIVES=interval:120,row-text:%1:,\
-    display:{{(%5-%6)/1000000000}}[1.0f] GB free ({{100-%7}}[1.2f]%%),style:b,color:#000000
+    display:{{(%5-%6)/1000000000}}[1.0f] GB free ({{100-%7}}[1.2f]%%),style:b,color:#FFFFFF
 
 ; Boot time
-DATETIME=text:Boot Time:,display:%9 %10,interval:600,style:b,color:#000000
+DATETIME=text:Boot Time:,display:%9 %10,interval:600,style:b,color:#FFFFFF
 
 ; 24/7 IT Service Desk
-COMMENT=style:bu,color:#000000,text:24/7 IT Service Desk ; Changed accent to black, 'b' for bold, 'u' for underline
-TEXT=text:Australia      ,display:13 18 09,style:b,color:#000000
-TEXT=text:New Zealand    ,display:0800 80 91 31,style:b,color:#000000
-TEXT=text:International  ,display:+61 7 3295 3111,style:b,color:#000000
+COMMENT=style:bu,color:%accent%,text:24/7 IT Service Desk ; accent is now white, 'b' for bold, 'u' for underline
+TEXT=text:Australia      ,display:13 18 09,style:b,color:#FFFFFF
+TEXT=text:New Zealand    ,display:0800 80 91 31,style:b,color:#FFFFFF
+TEXT=text:International  ,display:+61 7 3295 3111,style:b,color:#FFFFFF
 
 ; Windows 11 link
-; Note: Hyperlinks often have their own default styling which might override this.
-; We've set color:%accent% to black above, and ensured style:b for bold.
 HYPERLINK=wide:1,align:l,color:%accent%,style:b,font-size:11,\
           display:Windows 11 — What’s New,\
           uri:https://www.microsoft.com/en-au/windows/windows-11
