--- a/desktopinfo.ini
+++ b/desktopinfo.ini
@@ -5,14 +5,22 @@ right=32
 width=460
 column1width=125
 
-formcolor=#000000     ; charcoal card (This dark background is good for white text)
-transparency=25        ; SIGNIFICANTLY REDUCED: Was 50. This makes the panel 75% opaque.
-                       ; Lower this further (e.g., 15) if still not clear enough.
-                       ; Higher (e.g., 35) if you want more transparency but still good readability.
+; CHOOSE YOUR THEME:
+; 1. Uncomment ONE formcolor AND its matching transparency below.
+; 2. Go to [items] section and uncomment the corresponding text color set.
+
+; --- Dark Theme (White Text on Dark Panel) ---
+formcolor=#000000     ; Charcoal panel background
+transparency=25        ; Panel Opacity (e.g., 15-35; lower is more opaque, current good setting)
+
+; --- Light Theme (Black Text on Light Panel) ---
+;formcolor=#F0F0F0     ; Light Grey panel background (use #FFFFFF for pure white if preferred)
+;transparency=15        ; Panel Opacity (e.g., 0-25; light backgrounds often look good more opaque)
+
 
 font-face=Segoe UI
 font-size=13
-font-weight=bold       ; Attempt to make default font bold.
+font-weight=bold       ; Attempts to make default font bold
 font-quality=5
 line-spacing=2
 contextmenu=0
@@ -22,35 +30,47 @@ allowdrag=0
 menu-quit=Exit
 
 [items]
-TEXT-COLOR=#FFFFFF     ; labels - White for high contrast on dark panel
-COLOR=#FFFFFF          ; values - White for high contrast
-set accent=#FFFFFF     ; headings / hyperlink - Changed to White for uniformity and clarity
+; CHOOSE YOUR TEXT COLORS:
+; Uncomment ONE set below to match your theme choice in [options].
 
-; Apply bold style where possible, and ensure white color
-HOST=text:PC Name:,display:%1,style:b,color:#FFFFFF
+; --- White Text (for Dark Theme) ---
+TEXT-COLOR=#FFFFFF     ; Default label color
+COLOR=#FFFFFF          ; Default value color
+set accent=#FFFFFF     ; Color for headings/hyperlinks (e.g., "24/7 IT Service Desk", Link)
 
-; IPv4 address – first active NIC with a gateway
+; --- Black Text (for Light Theme) ---
+;TEXT-COLOR=#000000     ; Default label color
+;COLOR=#000000          ; Default value color
+;set accent=#000000     ; Color for headings/hyperlinks
+
+
+; Item Display:
+; 'style:b' attempts to make text bold.
+; Most items below will now use the global TEXT-COLOR for their labels and COLOR for their values.
+; Items using %accent% will adopt the accent color chosen above.
+
+HOST=text:PC Name:,display:%1,style:b
+
 NETWORKINTERFACES=interval:60,maxrows:1,operstatus:1,iftype:6 71,\
- text:IP Address:,hide-no-result:1,display:%8,style:b,color:#FFFFFF
+ text:IP Address:,hide-no-result:1,display:%8,style:b
 
-; Windows version / build
-WMI=text:OS Version:,namespace:root\cimv2,query:Win32_OperatingSystem,display:%Caption%,style:b,color:#FFFFFF
-REG=text:OS Build:,value:HKLM\SOFTWARE\Microsoft\Windows NT\CurrentVersion\DisplayVersion,display:%1,style:b,color:#FFFFFF
+WMI=text:OS Version:,namespace:root\cimv2,query:Win32_OperatingSystem,display:%Caption%,style:b
+REG=text:OS Build:,value:HKLM\SOFTWARE\Microsoft\Windows NT\CurrentVersion\DisplayVersion,display:%1,style:b
 
-; Logical drives – GB free + %
 LOGICALDRIVES=interval:120,row-text:%1:,\
-    display:{{(%5-%6)/1000000000}}[1.0f] GB free ({{100-%7}}[1.2f]%%),style:b,color:#FFFFFF
+    display:{{(%5-%6)/1000000000}}[1.0f] GB free ({{100-%7}}[1.2f]%%),style:b
 
-; Boot time
-DATETIME=text:Boot Time:,display:%9 %10,interval:600,style:b,color:#FFFFFF
+DATETIME=text:Boot Time:,display:%9 %10,interval:600,style:b
 
-; 24/7 IT Service Desk
-COMMENT=style:bu,color:%accent%,text:24/7 IT Service Desk ; accent is now white, 'b' for bold, 'u' for underline
-TEXT=text:Australia      ,display:13 18 09,style:b,color:#FFFFFF
-TEXT=text:New Zealand    ,display:0800 80 91 31,style:b,color:#FFFFFF
-TEXT=text:International  ,display:+61 7 3295 3111,style:b,color:#FFFFFF
+; "24/7 IT Service Desk" heading uses the 'accent' color
+COMMENT=style:bu,color:%accent%,text:24/7 IT Service Desk
 
-; Windows 11 link
+; Regular text lines: labels use TEXT-COLOR, displayed values use COLOR
+TEXT=text:Australia      ,display:13 18 09,style:b
+TEXT=text:New Zealand    ,display:0800 80 91 31,style:b
+TEXT=text:International  ,display:+61 7 3295 3111,style:b
+
+; Hyperlink uses the 'accent' color
 HYPERLINK=wide:1,align:l,color:%accent%,style:b,font-size:11,\
           display:Windows 11 — What’s New,\
           uri:https://www.microsoft.com/en-au/windows/windows-11
