--- a/desktopinfo.ini
+++ b/desktopinfo.ini
@@ -34,14 +34,14 @@ menu-quit=Exit
 ; Uncomment ONE set below to match your theme choice in [options].
 
 ; --- White Text (for Dark Theme) ---
-TEXT-COLOR=#FFFFFF     ; Default label color
-COLOR=#FFFFFF          ; Default value color
-set accent=#FFFFFF     ; Color for headings/hyperlinks (e.g., "24/7 IT Service Desk", Link)
+;TEXT-COLOR=#FFFFFF     ; Default label color
+;COLOR=#FFFFFF          ; Default value color
+;set accent=#FFFFFF     ; Color for headings/hyperlinks (e.g., "24/7 IT Service Desk", Link)
 
 ; --- Black Text (for Light Theme) ---
-;TEXT-COLOR=#000000     ; Default label color
-;COLOR=#000000          ; Default value color
-;set accent=#000000     ; Color for headings/hyperlinks
+TEXT-COLOR=#000000     ; Default label color
+COLOR=#000000          ; Default value color
+set accent=#000000     ; Color for headings/hyperlinks
 
 
 ; Item Display:
