--- a/desktopinfo.ini
+++ b/desktopinfo.ini
@@ -5,22 +5,19 @@ right=32
 width=460
 column1width=125
 
-; CHOOSE YOUR THEME:
-; 1. Uncomment ONE formcolor AND its matching transparency below.
-; 2. Go to [items] section and uncomment the corresponding text color set.
-
-; --- Dark Theme (White Text on Dark Panel) ---
+; --- Panel Background Color & Transparency ---
+; Active Theme: Dark Panel (for white text)
 formcolor=#000000     ; Charcoal panel background
-transparency=25        ; Panel Opacity (e.g., 15-35; lower is more opaque, current good setting)
+transparency=25        ; Panel Opacity (e.g., 15-35; lower is more opaque)
 
-; --- Light Theme (Black Text on Light Panel) ---
-;formcolor=#F0F0F0     ; Light Grey panel background (use #FFFFFF for pure white if preferred)
-;transparency=15        ; Panel Opacity (e.g., 0-25; light backgrounds often look good more opaque)
+; Inactive Theme: Light Panel (for black text) - To activate, comment out Dark Panel lines above and uncomment these:
+;formcolor=#F0F0F0     ; Light Grey panel background (or #FFFFFF for pure white)
+;transparency=15        ; Panel Opacity (e.g., 0-25; often more opaque for light backgrounds)
 
 
 font-face=Segoe UI
 font-size=13
-font-weight=bold       ; Attempts to make default font bold
+font-weight=bold       ; Global attempt to make font bold (worked well for some elements)
 font-quality=5
 line-spacing=2
 contextmenu=0
@@ -30,48 +27,50 @@ allowdrag=0
 menu-quit=Exit
 
 [items]
-; CHOOSE YOUR TEXT COLORS:
-; Uncomment ONE set below to match your theme choice in [options].
+; --- Global Text & Accent Colors ---
+; Active Theme: White Text (for dark panel)
+TEXT-COLOR=#FFFFFF     ; Default label color (e.g., for "Australia")
+COLOR=#FFFFFF          ; Default value color (e.g., for "13 18 09")
+set accent=#FFFFFF     ; Accent color for headings/hyperlinks
 
-; --- White Text (for Dark Theme) ---
-;TEXT-COLOR=#FFFFFF     ; Default label color
-;COLOR=#FFFFFF          ; Default value color
-;set accent=#FFFFFF     ; Color for headings/hyperlinks (e.g., "24/7 IT Service Desk", Link)
-
-; --- Black Text (for Light Theme) ---
-TEXT-COLOR=#000000     ; Default label color
-COLOR=#000000          ; Default value color
-set accent=#000000     ; Color for headings/hyperlinks
+; Inactive Theme: Black Text (for light panel) - To activate, comment out White Text lines above and uncomment these:
+;TEXT-COLOR=#000000     ; Default label color
+;COLOR=#000000          ; Default value color
+;set accent=#000000     ; Accent color for headings/hyperlinks
 
 
-; Item Display:
-; 'style:b' attempts to make text bold.
-; Most items below will now use the global TEXT-COLOR for their labels and COLOR for their values.
-; Items using %accent% will adopt the accent color chosen above.
+; --- Individual Item Styling ---
+; Note: 'style:b' attempts to make text bold. For items below, specific 'color' settings are provided for each theme.
 
-HOST=text:PC Name:,display:%1,style:b
-
+; Active Theme: White Text Details
+HOST=text:PC Name:,display:%1,style:b,color:#FFFFFF
 NETWORKINTERFACES=interval:60,maxrows:1,operstatus:1,iftype:6 71,\
- text:IP Address:,hide-no-result:1,display:%8,style:b
-
-WMI=text:OS Version:,namespace:root\cimv2,query:Win32_OperatingSystem,display:%Caption%,style:b
-REG=text:OS Build:,value:HKLM\SOFTWARE\Microsoft\Windows NT\CurrentVersion\DisplayVersion,display:%1,style:b
-
+ text:IP Address:,hide-no-result:1,display:%8,style:b,color:#FFFFFF
+WMI=text:OS Version:,namespace:root\cimv2,query:Win32_OperatingSystem,display:%Caption%,style:b,color:#FFFFFF
+REG=text:OS Build:,value:HKLM\SOFTWARE\Microsoft\Windows NT\CurrentVersion\DisplayVersion,display:%1,style:b,color:#FFFFFF
 LOGICALDRIVES=interval:120,row-text:%1:,\
-    display:{{(%5-%6)/1000000000}}[1.0f] GB free ({{100-%7}}[1.2f]%%),style:b
+    display:{{(%5-%6)/1000000000}}[1.0f] GB free ({{100-%7}}[1.2f]%%),style:b,color:#FFFFFF
+DATETIME=text:Boot Time:,display:%9 %10,interval:600,style:b,color:#FFFFFF
 
-DATETIME=text:Boot Time:,display:%9 %10,interval:600,style:b
+; Inactive Theme: Black Text Details - To activate, comment out White Text item lines above and uncomment these:
+;HOST=text:PC Name:,display:%1,style:b,color:#000000
+;NETWORKINTERFACES=interval:60,maxrows:1,operstatus:1,iftype:6 71,\
+; text:IP Address:,hide-no-result:1,display:%8,style:b,color:#000000
+;WMI=text:OS Version:,namespace:root\cimv2,query:Win32_OperatingSystem,display:%Caption%,style:b,color:#000000
+;REG=text:OS Build:,value:HKLM\SOFTWARE\Microsoft\Windows NT\CurrentVersion\DisplayVersion,display:%1,style:b,color:#000000
+;LOGICALDRIVES=interval:120,row-text:%1:,\
+;    display:{{(%5-%6)/1000000000}}[1.0f] GB free ({{100-%7}}[1.2f]%%),style:b,color:#000000
+;DATETIME=text:Boot Time:,display:%9 %10,interval:600,style:b,color:#000000
 
-; "24/7 IT Service Desk" heading uses the 'accent' color
+
+; Items using the 'accent' color (will change automatically with the accent setting above)
 COMMENT=style:bu,color:%accent%,text:24/7 IT Service Desk
-
-; Regular text lines: labels use TEXT-COLOR, displayed values use COLOR
-TEXT=text:Australia      ,display:13 18 09,style:b
-TEXT=text:New Zealand    ,display:0800 80 91 31,style:b
-TEXT=text:International  ,display:+61 7 3295 3111,style:b
-
-; Hyperlink uses the 'accent' color
 HYPERLINK=wide:1,align:l,color:%accent%,style:b,font-size:11,\
           display:Windows 11 — What’s New,\
           uri:https://www.microsoft.com/en-au/windows/windows-11
+
+; Text items for contacts - these will use global TEXT-COLOR and COLOR. Added style:b to ensure boldness.
+TEXT=text:Australia      ,display:13 18 09,style:b
+TEXT=text:New Zealand    ,display:0800 80 91 31,style:b
+TEXT=text:International  ,display:+61 7 3295 3111,style:b
 ;────────────────────────────────────────────────────────────────────────────
