--- a/desktopinfo.ini
+++ b/desktopinfo.ini
@@ -4,7 +4,7 @@ left=auto
 right=32
 width=520
 column1width=140
-
+ 
 transparency=0          ; Ensure no glow/shadow
 layering=0              ; Prevents unwanted alpha effects
 font-face=Segoe UI
@@ -12,45 +12,79 @@ font-size=13
 font-weight=bold
 font-quality=4
 line-spacing=5
-
+ 
 [items]
-set=key:DarkGrey,value:#111111
-set=key:SoftPanel,value:#F5F5F5
-
-PAGE=1
-
+ 
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;;SWAP THE BELOW VALUES TO INVERT THE COLOURS - BLACK / WHITE;;
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+ 
+set=key:DarkGrey,value:#F5F5F5
+set=key:SoftPanel,value:#111111
+ 
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;;SWAP THE ABOVE VALUES TO INVERT THE COLOURS - BLACK / WHITE;;
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+ 
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;;TO ADD SPACES BETWEEN LINES ADD THE FOLLOWING              ;;
+;;                                                           ;;
+;;      ; —— spacer for extra gap ——                         ;;
+;;	COMMENT=                                             ;;
+;;                                                           ;;
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+ 
+ 
 HOST=text:PC Name:,display:%1,style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
-
+ 
 NETWORKINTERFACES=interval:60,maxrows:2,operstatus:1,iftype:6 71,\
- text:IP Address:,hide-no-result:1,display:%8,style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
-
-WMI=text:OS Version:,namespace:root\cimv2,query:Win32_OperatingSystem,\
- display:%Caption%,style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
-
-REG=text:OS Build:,value:HKLM\SOFTWARE\Microsoft\Windows NT\CurrentVersion\DisplayVersion,\
- display:%1,style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
-
-LOGICALDRIVES=interval:120,row-text:%1:,\
- display:{{(%5-%6)/1000000000}}[1.0f] GB free ({{100-%7}}[1.1f]%%),\
- style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
-
-DATETIME=text:Boot Time:,display:%9 %10,interval:600,\
- style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
-
-COMMENT=style:bu,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50,\
- text:24/7 IT Service Desk
-
-HYPERLINK=wide:1,align:l,color:%DarkGrey%,style:b,font-size:12,\
- display:Windows 11 — What’s New,\
- uri:https://www.microsoft.com/en-au/windows/windows-11,\
- backcolor:%SoftPanel%,alpha:50
-
-TEXT=text:Australia     ,display:13 18 09,style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
-TEXT=text:New Zealand   ,display:0800 80 91 31,style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
-TEXT=text:International ,display:+61 7 3295 3111
+text:IP Address:,hide-no-result:1,display:%8,style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
+ 
 ; —— spacer for extra gap —— 
 COMMENT=
  
+WMI=text:OS Version:,namespace:root\cimv2,query:Win32_OperatingSystem,\
+display:%Caption%,style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
+ 
+REG=text:OS Build:,value:HKLM\SOFTWARE\Microsoft\Windows NT\CurrentVersion\DisplayVersion,\
+display:%1,style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
+ 
+LOGICALDRIVES=interval:120,row-text:%1:,\
+display:{{(%5-%6)/1000000000}}[1.0f] GB free ({{100-%7}}[1.1f]%),\
+style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
+ 
+DATETIME=text:Boot Time:,display:%9 %10,interval:600,\
+style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
+ 
+; —— spacer for extra gap —— 
+COMMENT=
+ 
+COMMENT=style:bu,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50,\
+text:24/7 IT Service Desk
+ 
+TEXT=text:Australia     ,display:13 18 09,style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
+TEXT=text:New Zealand   ,display:0800 80 91 31,style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
+TEXT=text:International ,display:+61 7 3295 3111,style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
+ 
+; —— spacer for extra gap —— 
+COMMENT=
+ 
+; —— spacer for extra gap —— 
+COMMENT=
+ 
+ 
+HYPERLINK=wide:1,align:l,color:%accent%,style:bu,font-size:11,\
+          display:IT Issue? Submit ticket at Technology Service Centre,\
+          uri:https://virginaustralia.service-now.com/sp
+ 
+ 
+HYPERLINK=wide:1,align:l,color:#ccff33,style:b,font-size:15,\
+display:Windows 11 — What’s New,\
+uri:https://www.microsoft.com/en-au/windows/windows-11,\
+backcolor:%SoftPanel%,alpha:50
+ 
+; —— spacer for extra gap —— 
+COMMENT=
 ; ─── Battery Section ──────────────────────────────────────────────────────
 # full battery status lookup table
 set battery0      = Not in use
@@ -66,92 +100,10 @@ set battery9      = Charging and Critical
 set battery10     = Undefined
 set battery11     = Partially Charged
 set battery<null> = Not Installed
- 
 # Battery level + status, with color alarms and custom no-battery text
 WMI=interval:60,id:battery,text:Battery,\
   alarms:(%EstimatedChargeRemaining% le 30 %orange%)(%EstimatedChargeRemaining% le 10 %red%),\
   namespace:root\cimv2,query:Win32_Battery,\
   display:%EstimatedChargeRemaining%% (%battery%BatteryStatus%%),\
   no-result:Not Installed,style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
-;────────────────────────────────────────────────────────────────────────────
-
-
-
-
-
-; —— spacer for extra gap —— 
-COMMENT=
-
-; —— spacer for extra gap —— 
-COMMENT=
-
-; —— spacer for extra gap —— 
-COMMENT=
- 
-
-HOST=text:PC Name:,display:%1
- 
-; IPv4 address – first active NIC with a gateway
-NETWORKINTERFACES=interval:30,operstatus:1,iftype:6 71,row-text:%2,display:%8
-WMI=interval:5,background-interval:60,hide-no-result:1,font-size:85%,chart:line log 22 1 00ff00 2 bb00bb,threshold1:1 3500000 0000ff,threshold2:2 1000000 ff0000,text:   Ethernet Traffic,namespace:root\cimv2,query:Win32_PerfFormattedData_Tcpip_NetworkInterface where Name like "%Ethernet:%" and CurrentBandwidth>0 ,display:R: %BytesReceivedPersec%[3.1b]Bps\, S: %BytesSentPersec%[3.1b]Bps\, B: {{1.0B:%CurrentBandwidth%/8}}Bps
-WMI=interval:5,active:0,background-interval:60,hide-no-result:1,font-size:80%,chart:line log 22 1 00ff00 2 bb00bb,threshold1:1 3500000 0000ff,threshold2:2 1000000 ff0000,text:   Wifi Traffic,namespace:root\cimv2,query:Win32_PerfFormattedData_Tcpip_NetworkInterface where Name like "%Wireless:%" and CurrentBandwidth>0,display:R: %BytesReceivedPersec%[3.1b]Bps\, S: %BytesSentPersec%[3.1b]Bps\, B: {{1.0B:%CurrentBandwidth%/8}}Bps
- 
- 
-; Windows version / build
-WMI=text:OS Version:,namespace:root\cimv2,query:Win32_OperatingSystem,display:%Caption%
-REG=text:OS Build:,value:HKLM\SOFTWARE\Microsoft\Windows NT\CurrentVersion\DisplayVersion,display:%1
- 
-; Logical drives – GB free + %
-LOGICALDRIVES=interval:120,row-text:%1:,\
-    display:{{(%5-%6)/1000000000}}[1.0f] GB free ({{100-%7}}[1.2f]%%)
- 
-; Boot time
-DATETIME=text:Boot Time:,display:%9 %10,interval:600
- 
-; —— spacer for extra gap —— 
-COMMENT=
- 
-; 24/7 IT Service Desk
-COMMENT=style:bu,color:%accent%,text:24/7 IT Service Desk
-TEXT=text:Australia     ,display:13 18 09
-TEXT=text:New Zealand   ,display:0800 80 91 31
-TEXT=text:International ,display:+61 7 3295 3111,style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
-
-HYPERLINK=wide:1,align:l,color:%accent%,style:bu,font-size:11,\
-          display:IT Issue? Submit ticket at Technology Service Centre,\
-          uri:https://virginaustralia.service-now.com/sp
- 
-; —— spacer for extra gap —— 
-COMMENT=
- 
-; Windows 11 link
-HYPERLINK=wide:1,align:l,color:%accent%,style:b,font-size:11,\
-          display:Windows 11 — What’s New,\
-          uri:https://www.microsoft.com/en-au/windows/windows-11
- 
-; —— spacer for extra gap —— 
-COMMENT=
- 
-; ─── Battery Section ──────────────────────────────────────────────────────
-# full battery status lookup table
-set battery0      = Not in use
-set battery1      = Charge Left
-set battery2      = AC Connected
-set battery3      = Fully Charged
-set battery4      = Low
-set battery5      = Critical
-set battery6      = Charging
-set battery7      = Charging and High
-set battery8      = Charging and Low
-set battery9      = Charging and Critical
-set battery10     = Undefined
-set battery11     = Partially Charged
-set battery<null> = Not Installed
- 
-# Battery level + status, with color alarms and custom no-battery text
-WMI=interval:60,id:battery,text:Battery,\
-  alarms:(%EstimatedChargeRemaining% le 30 %orange%)(%EstimatedChargeRemaining% le 10 %red%),\
-  namespace:root\cimv2,query:Win32_Battery,\
-  display:%EstimatedChargeRemaining%% (%battery%BatteryStatus%%),\
-  no-result:Not Installed
 ;────────────────────────────────────────────────────────────────────────────
