Add Device Info

--- a/desktopinfo.ini
+++ b/desktopinfo.ini
@@ -55,6 +55,9 @@ style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
  
 DATETIME=text:Boot Time:,display:%9 %10,interval:600,\
 style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
+
+WMI=text:Device:,namespace:root\cimv2,query:Win32_ComputerSystem,\
+display:%Manufacturer% %Model%,style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
  
 ; —— spacer for extra gap —— 
 COMMENT=
