Latest Change post Artwell feedback

--- a/desktopinfo.ini
+++ b/desktopinfo.ini
@@ -1,112 +1,178 @@
 [options]
-top=32
-left=auto
-right=32
-width=520
+
+top=5
+
+;left=5
+
+right=0
+
+width=350
+
 column1width=140
- 
+
 transparency=0          ; Ensure no glow/shadow
+
 layering=0              ; Prevents unwanted alpha effects
+
 font-face=Segoe UI
+
 font-size=13
+
 font-weight=bold
+
 font-quality=4
-line-spacing=5
- 
+
+line-spacing=2
+
 [items]
- 
+
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
 ;;SWAP THE BELOW VALUES TO INVERT THE COLOURS - BLACK / WHITE;;
+
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
- 
+
+;WHITE
+
 set=key:DarkGrey,value:#F5F5F5
+
 set=key:SoftPanel,value:#111111
  
+;BLACK
+
+;set=key:DarkGrey,value:#111111
+
+;set=key:SoftPanel,value:#F5F5F5
+
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
 ;;SWAP THE ABOVE VALUES TO INVERT THE COLOURS - BLACK / WHITE;;
+
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
- 
+
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
 ;;TO ADD SPACES BETWEEN LINES ADD THE FOLLOWING              ;;
+
 ;;                                                           ;;
+
 ;;      ; —— spacer for extra gap ——                         ;;
+
 ;;	COMMENT=                                             ;;
+
 ;;                                                           ;;
+
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
- 
- 
+
+
 HOST=text:PC Name:,display:%1,style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
- 
+
 NETWORKINTERFACES=interval:60,maxrows:2,operstatus:1,iftype:6 71,\
+
 text:IP Address:,hide-no-result:1,display:%8,style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
- 
-; —— spacer for extra gap —— 
-COMMENT=
- 
-WMI=text:OS Version:,namespace:root\cimv2,query:Win32_OperatingSystem,\
+
+;WMI=text:OS Version:,namespace:root\cimv2,query:Win32_OperatingSystem,\
+
 display:%Caption%,style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
- 
+
 REG=text:OS Build:,value:HKLM\SOFTWARE\Microsoft\Windows NT\CurrentVersion\DisplayVersion,\
-display:%1,style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
- 
+
+display:Windows 11 %1,style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
+
 LOGICALDRIVES=interval:120,row-text:%1:,\
+
 display:{{(%5-%6)/1000000000}}[1.0f] GB free ({{100-%7}}[1.1f]%),\
-style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
- 
-DATETIME=text:Boot Time:,display:%9 %10,interval:600,\
+
 style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
 
-WMI=text:Device:,namespace:root\cimv2,query:Win32_ComputerSystem,\
-display:%Manufacturer% %Model%,style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
+;DATETIME=text:Boot Time:,display:%9 %10,interval:600,\
+
+style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
  
-; —— spacer for extra gap —— 
-COMMENT=
- 
-COMMENT=style:bu,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50,\
-text:24/7 IT Service Desk
- 
-TEXT=text:Australia     ,display:13 18 09,style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
-TEXT=text:New Zealand   ,display:0800 80 91 31,style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
-TEXT=text:International ,display:+61 7 3295 3111,style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
- 
-; —— spacer for extra gap —— 
-COMMENT=
- 
-; —— spacer for extra gap —— 
-COMMENT=
- 
- 
-HYPERLINK=wide:1,align:l,color:%accent%,style:bu,font-size:11,\
-          display:IT Issue? Submit ticket at Technology Service Centre,\
-          uri:https://virginaustralia.service-now.com/sp
- 
- 
-HYPERLINK=wide:1,align:l,color:#ccff33,style:b,font-size:15,\
-display:Windows 11 — What’s New,\
-uri:https://www.microsoft.com/en-au/windows/windows-11,\
-backcolor:%SoftPanel%,alpha:50
- 
-; —— spacer for extra gap —— 
-COMMENT=
 ; ─── Battery Section ──────────────────────────────────────────────────────
+
 # full battery status lookup table
+
 set battery0      = Not in use
+
 set battery1      = Charge Left
+
 set battery2      = AC Connected
+
 set battery3      = Fully Charged
+
 set battery4      = Low
+
 set battery5      = Critical
+
 set battery6      = Charging
+
 set battery7      = Charging and High
+
 set battery8      = Charging and Low
+
 set battery9      = Charging and Critical
+
 set battery10     = Undefined
+
 set battery11     = Partially Charged
+
 set battery<null> = Not Installed
+
 # Battery level + status, with color alarms and custom no-battery text
+
 WMI=interval:60,id:battery,text:Battery,\
+
   alarms:(%EstimatedChargeRemaining% le 30 %orange%)(%EstimatedChargeRemaining% le 10 %red%),\
+
   namespace:root\cimv2,query:Win32_Battery,\
+
   display:%EstimatedChargeRemaining%% (%battery%BatteryStatus%%),\
+
   no-result:Not Installed,style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
+
 ;────────────────────────────────────────────────────────────────────────────
+ 
+ 
+WMI=text:Device:,namespace:root\cimv2,query:Win32_ComputerSystem,\
+
+display:%Manufacturer% %Model%,style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
+
+; —— spacer for extra gap —— 
+
+COMMENT=
+
+COMMENT=style:bu,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50,\
+
+text:24/7 IT Service Desk
+
+TEXT=text:Australia     ,display:13 18 09,style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
+
+TEXT=text:New Zealand   ,display:0800 80 91 31,style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
+
+TEXT=text:International ,display:+61 7 3295 3111,style:b,color:%DarkGrey%,backcolor:%SoftPanel%,alpha:50
+
+HYPERLINK=wide:1,align:l,color:%accent%,style:bu,font-size:11,\
+
+          display:IT Issue? Submit ticket Here,\
+
+          uri:https://virginaustralia.service-now.com/sp
+
+; —— spacer for extra gap —— 
+
+COMMENT=
+
+HYPERLINK=wide:1,align:l,color:#ccff33,style:b,font-size:15,\
+
+display:Windows 11 — What’s New,\
+
+uri:https://www.microsoft.com/en-au/windows/windows-11,\
+
+backcolor:%SoftPanel%,alpha:50
+
+; —— spacer for extra gap —— 
+
+COMMENT=
+
+Service Portal - Technology Service Centre
+ 
