Addded '\ background-interval:60000' to the IT Help ? Hyperlink

--- a/desktopinfo.ini
+++ b/desktopinfo.ini
@@ -24,8 +24,6 @@ font-quality=4
 
 line-spacing=2
 
-refresh=60000
-
 [items]
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
@@ -158,7 +156,8 @@ HYPERLINK=wide:1,align:l,color:%accent%,style:bu,font-size:11,\
 
           display:IT Issue? Submit ticket Here,\
 
-          uri:https://virginaustralia.service-now.com/sp
+          uri:https://virginaustralia.service-now.com/sp\
+background-interval:60000
 
 ; —— spacer for extra gap —— 
 
