VA Colour and new link

--- a/desktopinfo.ini
+++ b/desktopinfo.ini
@@ -165,13 +165,20 @@ COMMENT=
 
 HYPERLINK=wide:1,align:l,color:#ccff33,style:b,font-size:15,\
 
-display:Windows 11 — What’s New,\
+display:Meet Windows 11,\
 
-uri:https://www.microsoft.com/en-au/windows/windows-11,\
+uri:https://support.microsoft.com/en-gb/meetwindows11,\
 
 backcolor:%SoftPanel%,alpha:50
 
 ; —— spacer for extra gap —— 
+
+HYPERLINK=wide:1,align:c,font-size:15,style:bu,\
+color:#E60000,backcolor:#ffffff,alpha:25,\
+display:🌟 Discover What’s New in Windows 11 🌟,\
+uri:https://support.microsoft.com/en-gb/meetwindows11,\
+background-interval:60000
+
 
 COMMENT=
 
