--- a/desktopinfo.ini
+++ b/desktopinfo.ini
@@ -156,8 +156,7 @@ HYPERLINK=wide:1,align:l,color:%accent%,style:bu,font-size:13,\
 
           display:IT Issue? Submit ticket Here,\
 
-          uri:https://virginaustralia.service-now.com/sp\
-background-interval:60000
+          uri:https://virginaustralia.service-now.com/sp,background-interval:60000\
 
 ; —— spacer for extra gap —— 
 
