--- a/desktopinfo.ini
+++ b/desktopinfo.ini
@@ -160,22 +160,22 @@ HYPERLINK=wide:1,align:l,color:%accent%,style:bu,font-size:13,\
 
 ; —— spacer for extra gap —— 
 
-COMMENT=
+;COMMENT=
 
-HYPERLINK=wide:1,align:l,color:#ccff33,style:b,font-size:15,\
+;HYPERLINK=wide:1,align:l,color:#ccff33,style:b,font-size:15,\
 
-display:Meet Windows 11,\
+;display:Meet Windows 11,\
 
-uri:https://support.microsoft.com/en-gb/meetwindows11,\
+;uri:https://support.microsoft.com/en-gb/meetwindows11,\
 
-backcolor:%SoftPanel%,alpha:50
+;backcolor:%SoftPanel%,alpha:50
 
 ; —— spacer for extra gap —— 
 
 HYPERLINK=wide:1,align:c,font-size:15,style:bu,\
 color:#E60000,backcolor:#ffffff,alpha:25,\
 display:🌟 Discover What’s New in Windows 11 🌟,\
-uri:https://support.microsoft.com/en-gb/meetwindows11,\
+uri:https://support.microsoft.com/en-au/meetwindows11,\
 background-interval:60000
 
 
