--- a/desktopinfo.ini
+++ b/desktopinfo.ini
@@ -4,7 +4,7 @@ top=5
 
 ;left=5
 
-right=0
+right=5
 
 width=350
 
@@ -172,7 +172,7 @@ HYPERLINK=wide:1,align:l,color:%accent%,style:bu,font-size:13,\
 
 ; —— spacer for extra gap —— 
 
-HYPERLINK=wide:1,align:c,font-size:15,style:bu,\
+HYPERLINK=wide:1,align:c,font-size:15,font-face=Arial,style:bu,\
 color:#E60000,backcolor:#ffffff,alpha:25,\
 display:🌟 Discover What’s New in Windows 11 🌟,\
 uri:https://support.microsoft.com/en-au/meetwindows11,\
