--- a/desktopinfo.ini
+++ b/desktopinfo.ini
@@ -172,8 +172,8 @@ uri:https://virginaustralia.service-now.com/sp,background-interval:60000\
 
 HYPERLINK=wide:1,align:c,font-size:15,font-face=Arial,style:bu,\
 color:#E60000,backcolor:#ffffff,alpha:25,\
-display:🌟 Discover What’s New in Windows 11 🌟,\
-uri:https://support.microsoft.com/en-au/meetwindows11,\
+display:🌟 Virgin Australia - Windows 11 🌟,\
+uri:https://virginaustralia.sharepoint.com/sites/Windows11?market=en-US,\
 background-interval:60000
 
 
