--- a/desktopinfo.ini
+++ b/desktopinfo.ini
@@ -24,6 +24,8 @@ font-quality=4
 
 line-spacing=2
 
+ignore-setting-change=1 ; added 16/6 to fix the flashing
+
 [items]
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
@@ -172,7 +174,7 @@ uri:https://virginaustralia.service-now.com/sp,background-interval:60000\
 
 HYPERLINK=wide:1,align:c,font-size:15,font-face=Arial,style:bu,\
 color:#E60000,backcolor:#ffffff,alpha:25,\
-display:🌟 Virgin Australia - Windows 11 🌟,\
+display: Virgin Australia - Windows 11 ,\
 uri:https://virginaustralia.sharepoint.com/sites/Windows11?market=en-US,\
 background-interval:60000
 
