--- a/desktopinfo.ini
+++ b/desktopinfo.ini
@@ -172,9 +172,9 @@ uri:https://virginaustralia.service-now.com/sp,background-interval:60000\
 
 ; —— spacer for extra gap —— 
 
-HYPERLINK=wide:1,align:c,font-size:15,font-face=Arial,style:bu,\
+HYPERLINK=wide:1,align:l,font-size:15,font-face=Arial,style:bu,\
 color:#E60000,backcolor:#ffffff,alpha:25,\
-display: Virgin Australia - Windows 11 ,\
+display:Virgin Australia - Windows 11 ,\
 uri:https://virginaustralia.sharepoint.com/sites/Windows11?market=en-US,\
 background-interval:60000
 
