--- a/desktopinfo.ini
+++ b/desktopinfo.ini
@@ -36,15 +36,15 @@ ignore-setting-change=1 ; added 16/6 to fix the flashing
 
 ;WHITE
 
-set=key:DarkGrey,value:#F5F5F5
+;set=key:DarkGrey,value:#F5F5F5
 
-set=key:SoftPanel,value:#111111
+;set=key:SoftPanel,value:#111111
  
 ;BLACK
 
-;set=key:DarkGrey,value:#111111
+set=key:DarkGrey,value:#111111
 
-;set=key:SoftPanel,value:#F5F5F5
+set=key:SoftPanel,value:#F5F5F5
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
@@ -183,3 +183,4 @@ COMMENT=
 
 Service Portal - Technology Service Centre
  
+
