--- a/desktopinfo.ini
+++ b/desktopinfo.ini
@@ -20,7 +20,9 @@ font-size=13
 
 font-weight=bold
 
-font-quality=4
+font-quality=3
+
+;You might need to adjust the above number up or down to get the font to look nice.
 
 line-spacing=2
 
